fix overflow issues

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
   color: var(--main-color);
 }
 
-body {
+body,
+html {
   background: linear-gradient(#fff, #d9d9d9);
   width: 100vw;
   height: 100vh;
@@ -19,12 +20,12 @@ body {
 .wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  min-height: 85%;
   max-width: 960px;
-  height: 100%;
   margin: auto;
-  gap: 100px;
+  overflow: hidden;
 }
 
 .heading {
@@ -51,8 +52,7 @@ body {
 
 img {
   margin-bottom: 40px;
-  height: 130px;
-  width: 130px;
+  height: auto;
   pointer-events: none;
 }
 
